[gd_scene load_steps=23 format=3 uid="uid://dyrq71y026xpv"]

[ext_resource type="Script" path="res://scripts/enemy_1.gd" id="1_isjb6"]
[ext_resource type="Texture2D" uid="uid://deyi4pr4tqo6x" path="res://assets/sprites/characters/slime.png" id="2_qv78v"]
[ext_resource type="PackedScene" uid="uid://caqttceodr8gh" path="res://scenes/health_bar.tscn" id="3_8kch5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nhp8i"]
atlas = ExtResource("2_qv78v")
region = Rect2(0, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vy534"]
atlas = ExtResource("2_qv78v")
region = Rect2(32, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jsuc8"]
atlas = ExtResource("2_qv78v")
region = Rect2(64, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2tumu"]
atlas = ExtResource("2_qv78v")
region = Rect2(96, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jf3c"]
atlas = ExtResource("2_qv78v")
region = Rect2(128, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fb2cg"]
atlas = ExtResource("2_qv78v")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8yf2"]
atlas = ExtResource("2_qv78v")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l7vo5"]
atlas = ExtResource("2_qv78v")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4tr6"]
atlas = ExtResource("2_qv78v")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6x6we"]
atlas = ExtResource("2_qv78v")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ankrc"]
atlas = ExtResource("2_qv78v")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0o1xc"]
atlas = ExtResource("2_qv78v")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1mtg"]
atlas = ExtResource("2_qv78v")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aev0b"]
atlas = ExtResource("2_qv78v")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_thl31"]
atlas = ExtResource("2_qv78v")
region = Rect2(160, 128, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_xxmnc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nhp8i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vy534")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jsuc8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2tumu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jf3c")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fb2cg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8yf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l7vo5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4tr6")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6x6we")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ankrc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0o1xc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1mtg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aev0b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_thl31")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_k5q22"]
radius = 43.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hiso4"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_kvi84"]

[node name="enemy_1" type="CharacterBody2D" groups=["Enemies"]]
y_sort_enabled = true
script = ExtResource("1_isjb6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_xxmnc")
animation = &"death"
offset = Vector2(0, -6)

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_k5q22")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_hiso4")

[node name="enemy_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox"]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_kvi84")

[node name="take_damage_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="HealthBar" parent="." instance=ExtResource("3_8kch5")]
offset_left = -6.0
offset_top = -16.0
offset_right = 6.0
offset_bottom = -14.0

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="timeout" from="take_damage_cooldown" to="." method="_on_take_damage_cooldown_timeout"]
